--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -16,6 +16,7 @@
  	<li>cats</li>
  	<li>dogs</li>
  	<li>unicorns</li>
+ 	<a>This should throw a validation error. zomg, halp!</a>
  </ol>
 
  Styleguide 1.1
